# openai-agentsdk-code

./: .env.example  .gitignore  README.md  pyproject.toml  triage_system_architecture
.devcontainer/: Dockerfile  devcontainer.json
src/: utils.py
src/chapter1/: haiku_agent.py  haiku_non_agent.py
src/chapter10/: higher_level.py  sensitive_data.py  tracing_example.py  visualization.py
src/chapter11/: custom_workflow.py  main.py  simulate_static.py
src/chapter12/: main.py
src/chapter2/: basic_agent.py  stock_agent.py
src/chapter3/: json_via_prompt.py  other_models.py
src/chapter4/: dynamic_instruction.py  model_settings.py  state_with_context.py  tool_choice.py
src/chapter5/: specialists.py  tool_error.py  tools.py
src/chapter6/: filesystem_server.py
src/chapter7/: custom_handoff.py  handoff.py  input_filter.py  simple_handoff.py  structured_data.py  triage.py
src/chapter8/: chaining.py  llm_as_a_judge.py  parallelization.py
src/chapter9/: input_guardrails.py  output_guardrails.py
src/tinib00k/: utils.py
src/tinib00k/chapter1/: haiku_agent.py
src/tinib00k/chapter10/: higher_level.py  sensitive_data.py  tracing_example.py  visualization.py
src/tinib00k/chapter11/: main.py
src/tinib00k/chapter2/: basic_agent.py  stock_agent.py  stock_agent_streamed.py
src/tinib00k/chapter3/: json_via_prompt.py  other_models.py
src/tinib00k/chapter4/: dynamic_instruction.py  model_settings.py  state_with_context.py  tool_choice.py
src/tinib00k/chapter5/: specialists.py  tool_error.py  tools.py
src/tinib00k/chapter6/: filesystem_server.py
(+9 files in other folders)
